Fixing spacing

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -52,7 +52,7 @@ $color-background-dark: $color-gray-darker !default;
 
 // Text colors
 $color-text: $color-gray-darker !default;
-$color-headings: $color-gray-darker !default;
+$color-headings: $color-black !default;
 $color-text-light: $color-gray-light !default;
 $color-text-muted: $color-gray-dark !default;
 
